remove deprecated content.